// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`options as array of objects disabled sets the aria-disabled attribute 1`] = `
<div>
  <div
    class="dropdown"
  >
    <button
      aria-controls="id_listbox"
      aria-haspopup="listbox"
      class="dropdown__button"
      id="id"
      type="button"
    >
      Apple
    </button>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="dropdown__option"
        id="id_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        aria-disabled="true"
        class="dropdown__option"
        id="id_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
    </ul>
  </div>
</div>
`;

exports[`options as array of objects group renders grouped options 1`] = `
<div>
  <div
    class="dropdown"
  >
    <button
      aria-controls="id_listbox"
      aria-haspopup="listbox"
      class="dropdown__button"
      id="id"
      type="button"
    >
      Apple
    </button>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="dropdown__option"
        id="id_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        aria-disabled="true"
        aria-label="Citrus"
        class="dropdown__group"
        id="group_citrus"
        role="group"
        tabindex="-1"
      >
        Citrus
      </li>
      <li
        class="dropdown__option dropdown__option--grouped"
        id="id_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
      <li
        class="dropdown__option dropdown__option--grouped"
        id="id_lemon"
        role="option"
        tabindex="-1"
      >
        Lemon
      </li>
      <li
        aria-disabled="true"
        aria-label="Berry"
        class="dropdown__group"
        id="group_berry"
        role="group"
        tabindex="-1"
      >
        Berry
      </li>
      <li
        class="dropdown__option dropdown__option--grouped"
        id="id_raspberry"
        role="option"
        tabindex="-1"
      >
        Raspberry
      </li>
      <li
        class="dropdown__option dropdown__option--grouped"
        id="id_strawberry"
        role="option"
        tabindex="-1"
      >
        Strawberry
      </li>
    </ul>
  </div>
</div>
`;

exports[`options as array of objects label renders a closed drop down 1`] = `
<div>
  <div
    class="dropdown"
  >
    <button
      aria-controls="id_listbox"
      aria-haspopup="listbox"
      class="dropdown__button"
      id="id"
      type="button"
    >
      Apple
    </button>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="dropdown__option"
        id="id_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="dropdown__option"
        id="id_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="dropdown__option"
        id="id_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
  </div>
</div>
`;

exports[`options options as array of numbers renders a closed drop down 1`] = `
<div>
  <div
    class="dropdown"
  >
    <button
      aria-controls="id_listbox"
      aria-haspopup="listbox"
      class="dropdown__button"
      id="id"
      type="button"
    >
      1
    </button>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="dropdown__option"
        id="id_1"
        role="option"
        tabindex="-1"
      >
        1
      </li>
      <li
        class="dropdown__option"
        id="id_2"
        role="option"
        tabindex="-1"
      >
        2
      </li>
      <li
        class="dropdown__option"
        id="id_3"
        role="option"
        tabindex="-1"
      >
        3
      </li>
    </ul>
  </div>
</div>
`;

exports[`options options as array of strings renders a closed drop down 1`] = `
<div>
  <div
    class="dropdown"
  >
    <button
      aria-controls="id_listbox"
      aria-haspopup="listbox"
      class="dropdown__button"
      id="id"
      type="button"
    >
      Apple
    </button>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="dropdown__option"
        id="id_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="dropdown__option"
        id="id_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="dropdown__option"
        id="id_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
  </div>
</div>
`;
